# kahoonaut

./: package.json  vite.config.ts
backend/: Cargo.toml  export  package-lock.json  package.json  questions.xlsx
backend/src/: index.ts  main.rs
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  App.tsx  index.scss  index.tsx  main.rs  main.ts  types.ts
frontend/src/components/: PromptInput.svelte  PromptInput.tsx  Question.tsx  QuestionEditor.svelte  QuestionList.svelte  QuestionList.tsx  Toast.tsx  mod.rs  prompt_input.rs  question.rs  question_list.rs  toast.rs
kahoonaut/: package-lock.json  package.json
kahoonaut/src/lib/: App.svelte  types.ts
kahoonaut/src/lib/components/: PromptInput.svelte  QuestionEditor.svelte
kahoonaut/src/routes/: +layout.svelte  +page.svelte
kahoonaut/src/routes/api/v1/export/: +server.ts
kahoonaut/src/routes/api/v1/prompt/: +server.ts
src/: app.css
src/lib/: App.svelte
src/lib/components/: HamburgerMenu.svelte  HamburgerMenuItem.svelte  PromptInput.svelte  QuestionEditor.svelte  QuestionList.svelte  Toast.svelte
