[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
mistralai-client = "0.14.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = { version = "0.6.0", default-features = false }
rust_xlsxwriter = "0.84.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tokio-postgres = "0.7.13"
